--- a/StorageDB/Base.lproj/Main.storyboard
+++ b/StorageDB/Base.lproj/Main.storyboard
@@ -109,7 +109,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Y7W-ZR-JUe">
-                                <rect key="frame" x="0.0" y="88" width="375" height="690"/>
+                                <rect key="frame" x="0.0" y="44" width="375" height="734"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </tableView>
                         </subviews>
@@ -164,12 +164,25 @@
                     <view key="view" contentMode="scaleToFill" id="NXx-gI-HlM">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="HQ9-tX-1tM">
+                                <rect key="frame" x="0.0" y="44" width="375" height="734"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="HQ9-tX-1tM" firstAttribute="leading" secondItem="7fs-iX-hH4" secondAttribute="leading" id="E2N-Re-bhk"/>
+                            <constraint firstItem="HQ9-tX-1tM" firstAttribute="top" secondItem="7fs-iX-hH4" secondAttribute="top" id="HPc-yW-Y2D"/>
+                            <constraint firstItem="7fs-iX-hH4" firstAttribute="bottom" secondItem="HQ9-tX-1tM" secondAttribute="bottom" id="lyF-xM-pzW"/>
+                            <constraint firstItem="7fs-iX-hH4" firstAttribute="trailing" secondItem="HQ9-tX-1tM" secondAttribute="trailing" id="nGI-6j-p32"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="7fs-iX-hH4"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Title" id="ppo-xT-Sen"/>
+                    <navigationItem key="navigationItem" title="Title" id="L1d-PE-QL1"/>
                     <connections>
-                        <outlet property="navItem" destination="ppo-xT-Sen" id="Cd7-dR-nle"/>
+                        <outlet property="compareTable" destination="HQ9-tX-1tM" id="YYI-iU-xvo"/>
+                        <outlet property="navItem" destination="L1d-PE-QL1" id="hMT-PO-Zpl"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7tY-zA-qTa" userLabel="First Responder" sceneMemberID="firstResponder"/>
